* The info box in the class doc page is now only shown if javascript is created; this makes the reference guide more suitable for e.g. TGHtml but also links/lynx etc. Achieved by writing the info box with javascript. * With !=1 as the third argument to THtml::MakeAll(), THtml will use a thread pool when generating the documentation. Added the necessary locks. Threads cannot create TCanvases which is a problem for TDocDirective; this remains to be fixed. As in: WARNING: don't pass numthreads != 1 if you have a TDocMacroDirective or TDocLatexDirective! * Fix constness of a few functions. * Don't put $ROOTSYS in front of module's source path * Fix a string index ==-1 problem in TDocParser::LocateMethodInCurrentLine() discovered with TMath * TDocDirective: don't delete returned objects if gPad has changed - it might be part of the TCanvas and thus deleted when deleting gPad. * Add a few gVirtualX->Update()s to reduce the amount of X11 errros. * Use ':' as the macro path delimiter, even on Windows. * Only initialize the graphics libs if needed. * Hack to change the new DeclFileName()s for ROOT from include/Whatever.h to module/inc/Whatever.h, so ViewCVS can display it. * Hack of hack to fix the DeclFileName() for TMVA. * Increase the font size of pre blocks; they were too small with TTF on linux.
git-svn-id: http://root.cern.ch/svn/root/trunk@19593 27541ba8-7e3a-0410-8455-c3a389f83636

--- a/etc/html/ROOT.css
+++ b/etc/html/ROOT.css
@@ -5,10 +5,10 @@ body {
    color: inherit;
    background-color: #fcfcfc;
    font-family: Arial;
-   font-size: smaller;
+   font-size: small;
 }
 pre {
-   font-size: small;
+   font-size: larger;
 }
 
 /* links */
